# oci-agent

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  SETUP.md  pyproject.toml
configs/: smoketest.yaml  xgboost.yaml
evals/: README.md  acic2016  generate_synthetic_acic.py
evals/baseline_vs_scaffolded/: README.md  plot.py  run.py
evals/smoketest/: README.md  benchmarks.csv  eval.py  judge.py  judge_results.json  plot.py  results.json  run.py
examples/: eval_spec.yaml
notebooks/: econml.ipynb
oci_agent/: actor.py  agent.py  critic.py  nb_runner.py
oci_agent/backends/: econml_helpers.py  estimators.py  utils.py
plans/: baseline_vs_scaffolded.md  smoketest.md  tryitout.md
skills/changing-notebooks/: SKILL.md
skills/running-notebooks/: SKILL.md
skills/suggesting-remedies/: SKILL.md
skills/writing-reports/: SKILL.md
skills/writing-specs/: SKILL.md
